; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zalloc.c_get_zone_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zalloc.c_get_zone_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zone_page_metadata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zone_page_metadata*)* @get_zone_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_zone_page(%struct.zone_page_metadata* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.zone_page_metadata*, align 8
  store %struct.zone_page_metadata* %0, %struct.zone_page_metadata** %3, align 8
  %4 = load %struct.zone_page_metadata*, %struct.zone_page_metadata** %3, align 8
  %5 = call i64 @from_zone_map(%struct.zone_page_metadata* %4, i32 4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.zone_page_metadata*, %struct.zone_page_metadata** %3, align 8
  %9 = call i32 @PAGE_INDEX_FOR_METADATA(%struct.zone_page_metadata* %8)
  %10 = call i32 @PAGE_FOR_PAGE_INDEX(i32 %9)
  store i32 %10, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load %struct.zone_page_metadata*, %struct.zone_page_metadata** %3, align 8
  %13 = call i32 @trunc_page(%struct.zone_page_metadata* %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @from_zone_map(%struct.zone_page_metadata*, i32) #1

declare dso_local i32 @PAGE_FOR_PAGE_INDEX(i32) #1

declare dso_local i32 @PAGE_INDEX_FOR_METADATA(%struct.zone_page_metadata*) #1

declare dso_local i32 @trunc_page(%struct.zone_page_metadata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
